// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AristSearch Container should display a list of current inventory items 1`] = `
<div>
  <header>
    <h1>
      RESTaurant Inventory 
    </h1>
    <h3>
      <a
        href="/add"
      >
        Add an Item
      </a>
    </h3>
    <h3>
      <a
        href="/"
      >
        Return to Inventory
      </a>
    </h3>
  </header>
  <ul
    aria-label="inventory-list"
  >
    <a
      href="/1"
    >
      <li>
        <h2>
          potatoes
        </h2>
        <p>
          Category:
           
          produce
        </p>
        <p>
          Item Price:
           
          5
        </p>
        <p>
          Total Items:
           
          5
        </p>
        <p>
          Total Price:
           
          25
        </p>
      </li>
    </a>
    <a
      href="/2"
    >
      <li>
        <h2>
          onions
        </h2>
        <p>
          Category:
           
          produce
        </p>
        <p>
          Item Price:
           
          20
        </p>
        <p>
          Total Items:
           
          1
        </p>
        <p>
          Total Price:
           
          20
        </p>
      </li>
    </a>
    <a
      href="/3"
    >
      <li>
        <h2>
          bacon
        </h2>
        <p>
          Category:
           
          protein
        </p>
        <p>
          Item Price:
           
          90
        </p>
        <p>
          Total Items:
           
          1
        </p>
        <p>
          Total Price:
           
          90
        </p>
      </li>
    </a>
  </ul>
</div>
`;

exports[`Inventory List Screen should display a list of current inventory items 1`] = `
<div>
  <header>
    <h1>
      RESTaurant Inventory 
    </h1>
    <h3>
      <a
        href="/add"
      >
        Add an Item
      </a>
    </h3>
    <h3>
      <a
        href="/"
      >
        Return to Inventory
      </a>
    </h3>
  </header>
  <ul
    aria-label="inventory-list"
  >
    <a
      href="/1"
    >
      <li>
        <article
          aria-label="inventory item"
        >
          <h2>
            potatoes
          </h2>
          <p>
            Category:
             
            produce
          </p>
          <p>
            Item Price:
             
            5
          </p>
          <p>
            Total Items:
             
            5
          </p>
          <p>
            Total Price:
             
            25
          </p>
        </article>
      </li>
    </a>
    <a
      href="/2"
    >
      <li>
        <article
          aria-label="inventory item"
        >
          <h2>
            onions
          </h2>
          <p>
            Category:
             
            produce
          </p>
          <p>
            Item Price:
             
            20
          </p>
          <p>
            Total Items:
             
            1
          </p>
          <p>
            Total Price:
             
            20
          </p>
        </article>
      </li>
    </a>
    <a
      href="/3"
    >
      <li>
        <article
          aria-label="inventory item"
        >
          <h2>
            bacon
          </h2>
          <p>
            Category:
             
            protein
          </p>
          <p>
            Item Price:
             
            90
          </p>
          <p>
            Total Items:
             
            1
          </p>
          <p>
            Total Price:
             
            90
          </p>
        </article>
      </li>
    </a>
  </ul>
</div>
`;
